kubernetes/2.3/src/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  ports:
  - name: nginx-service
    port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-multitool

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - name: index-html
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
        - name: index-html
          configMap:
            name: my-configmap
            items:
              - key: index.html
                path: index.html
